<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RingUp</string>
    <string name="action_settings">Settings</string>
    <string name="action_item_inventory">Item Inventory</string>
    <string name="action_sales_report">Sales Report</string>
    <string name="action_about">About</string>

    <string name="items_title">Butt</string>

    <string name="add_item">Add Item</string>


    <string name="settings_business_info">Business Information</string>
    <string name="settings_bluetooth">Bluetooth</string>

    <string name="item_name_label">Name</string>
    <string name="item_name_hint">Enter name of item</string>
    
    <string name="item_details_label">Details</string>
    <string name="item_price_hint">Price</string>
    
    <string name="item_category_label">Category</string>
    <string name="item_category_label_autocomplete">Category</string>
    <string name="item_category_hint">Enter category of item</string>
    
    <string name="item_qty_label">Quantity</string>
    <string name="item_qty_hint">Enter quantity of item</string>
    
    <string name="item_scan">Scan UPC</string>
    <string name="item_upc_hint">Have a UPC Code?</string>

    <string name="item_pick_icon">Choose an Icon</string>
    <string name="item_pick_icon_hint">Icon: </string>
    
    <string name="receipt_total_label">Total:\t\t</string>
    <string name="receipt_tax_label">Tax:\t\t\t</string>
    <string name="receipt_tendered_label">Tendered:\t\t</string>
    <string name="receipt_change_label">Change:\t\t</string>

    <string name="list_item_name"><u>Name</u></string>
    <string name="list_item_qty"><u>Qty</u></string>
    <string name="list_item_price"><u>Price</u></string>

    <string name="date_picker_title">Pick Report Date</string>
    <string name="report_search_date">Date Search</string>

    <string name="delete_item">Delete Item</string>
</resources>
